@@ -1,3 +1,9 @@
+2004-07-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* install-2004.js.in: New.
+
+	* replace.pl (replace_percent): Don't quote list items if xml mode.
+
 2004-04-14  Wakaba  <wakaba@suika.fam.cx>
 
 	* replace.pl (%var): Bug fixed.
